--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 body {
-  background: darkgrey;
+  font-family: "Open Sans", sans-serif;
+  background-color: #f2f2f2;
+}
+
+@font-face {
+  font-family: "Open Sans";
 }
 
 /*# sourceMappingURL=style.css.map */
