--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,8 @@
 body {
-  background: darkgrey;
+  font-family: 'Open Sans', sans-serif;
+  background-color: #f2f2f2;
+}
+
+@font-face {
+  font-family: 'Open Sans';
 }
